Fixed the overflow bug in <section> OG image added

--- a/_sass/tompsonsband/_base.scss
+++ b/_sass/tompsonsband/_base.scss
@@ -37,6 +37,7 @@ body {
 
 section {
   position: relative;
+  overflow-x: hidden;
 
   &:nth-child(even) {
     background: $background-color;
